Arreglo de bugs en los filtros de prerrequisitos, de todos los elementos susceptibles a presentar requisitos de obtención. Ahora los personajes pueden tener región de nacimiento.
